# ChangeLog for net-proxy/haproxy
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-proxy/haproxy/ChangeLog,v 1.85 2013/09/17 12:30:09 tomwij Exp $

*haproxy-1.5_beta19-r1 (17 Sep 2013)

  17 Sep 2013; Tom Wijsman <TomWij@gentoo.org> +haproxy-1.5_beta19-r1.ebuild,
  haproxy-9999.ebuild, metadata.xml:
  Revision bump. Add systemd service unit. Add tools USE flag that install halog
  and iprange. EAPI 5. Part of the changes are contributed by Bertrand Jacquin
  (beber), fixes bug #466404.

  30 Jun 2013; Agostino Sarubbo <ago@gentoo.org> haproxy-1.4.24.ebuild:
  Stable for ppc, wrt bug #473674

  30 Jun 2013; Agostino Sarubbo <ago@gentoo.org> haproxy-1.4.24.ebuild:
  Stable for x86, wrt bug #473674

  30 Jun 2013; Agostino Sarubbo <ago@gentoo.org> haproxy-1.4.24.ebuild:
  Stable for amd64, wrt bug #473674

*haproxy-1.5_beta19 (29 Jun 2013)
*haproxy-1.4.24 (29 Jun 2013)

  29 Jun 2013; Christian Ruppert <idl0r@gentoo.org> -haproxy-1.4.22.ebuild,
  +haproxy-1.4.24.ebuild, -haproxy-1.5_beta18.ebuild,
  +haproxy-1.5_beta19.ebuild:
  Version bumps, cleanup. Fixes CVE-2013-2175, bug 473674

*haproxy-9999 (13 May 2013)

  13 May 2013; Christian Ruppert <idl0r@gentoo.org> +haproxy-9999.ebuild:
  Add haproxy live ebuild

  05 Apr 2013; Agostino Sarubbo <ago@gentoo.org> haproxy-1.4.23.ebuild:
  Stable for ppc, wrt bug #464340

  05 Apr 2013; Agostino Sarubbo <ago@gentoo.org> haproxy-1.4.23.ebuild:
  Stable for x86, wrt bug #464340

  05 Apr 2013; Agostino Sarubbo <ago@gentoo.org> haproxy-1.4.23.ebuild:
  Stable for amd64, wrt bug #464340

*haproxy-1.5_beta18 (04 Apr 2013)
*haproxy-1.4.23 (04 Apr 2013)

  04 Apr 2013; Christian Ruppert <idl0r@gentoo.org> +haproxy-1.4.23.ebuild,
  -haproxy-1.5_beta17.ebuild, +haproxy-1.5_beta18.ebuild:
  Version bump, CVE-2013-1912

  02 Apr 2013; Christian Ruppert <idl0r@gentoo.org> -haproxy-1.4.21.ebuild,
  -haproxy-1.5_beta15.ebuild, -files/haproxy.initd-r1:
  Cleanup
