@@ -1,13 +1,0 @@
-DEFINED_PHASES=compile install postinst setup
-DEPEND=pcre? ( dev-libs/libpcre )
-DESCRIPTION=A TCP/HTTP reverse proxy for high availability environments
-EAPI=5
-HOMEPAGE=http://haproxy.1wt.eu
-IUSE=+crypt examples +pcre vim-syntax
-KEYWORDS=amd64 ppc x86
-LICENSE=GPL-2 LGPL-2.1
-RDEPEND=pcre? ( dev-libs/libpcre )
-SLOT=0
-SRC_URI=http://haproxy.1wt.eu/download/1.4/src/haproxy-1.4.23.tar.gz
-_eclasses_=eutils	a82a329b538368791f5a6113c60e557e	flag-o-matic	65cef1287b9d62b1a0f180765d1e0c69	multilib	892e597faee02a5b94eb02ab512e7622	toolchain-funcs	51e6c948e72c43bcc8edc7544411c953	user	d0a4d0735a6c0183d707ca919bd72f28	versionator	a8a3963967d6140be9a14b08bb8f047f
-_md5_=ebab0ebe97ef3945915de8938b048366
