@@ -1,0 +1,12 @@
+DEFINED_PHASES=configure install postinst preinst prepare
+DESCRIPTION=A fast unix command line interface to WWW
+EAPI=4
+HOMEPAGE=http://surfraw.alioth.debian.org/
+KEYWORDS=~amd64 ~hppa ~ppc ~sparc ~x86 ~x86-interix ~amd64-linux ~x86-linux ~ppc-macos ~sparc-solaris
+LICENSE=public-domain
+RDEPEND=dev-lang/perl
+RESTRICT=test
+SLOT=0
+SRC_URI=http://surfraw.alioth.debian.org/dist/surfraw-2.2.9.tar.gz
+_eclasses_=bash-completion-r1	d339dd40b2014cf1edba8592580eef42	eutils	a82a329b538368791f5a6113c60e557e	multilib	892e597faee02a5b94eb02ab512e7622	toolchain-funcs	51e6c948e72c43bcc8edc7544411c953	user	d0a4d0735a6c0183d707ca919bd72f28
+_md5_=b3d26dcf478c56b02866e72586b4346f
