@@ -2,24 +2,23 @@
 Hash: SHA256
 
 AUX haproxy.initd-r2 1095 SHA256 0136fbcbb9e7c77dfade5a4b0f28522a11f15c84fb0bb79f5f486f6baf00a0c4 SHA512 32c5a78a6545c7357ae4b81d8b236ae7569a6ca55171c7560089d345a7a8ba7d2df2083fc7c43b72031a0f8ad1e5151990530ce7b4d2c967dd959bd0ee542ee5 WHIRLPOOL e5c251617d938f07c9dcdb3008f8ec050bedd9c2dccdd63b4c83d8367795e24be79a1f394808f530f908f0147f72b7a6794a75a240d26d9d23285265f496f1b4
-DIST haproxy-1.4.23.tar.gz 835907 SHA256 ea5ad4166b394b4acc5065a013c78d3002fe4569dec5f919c09f2a28fb4438f1 SHA512 bba4895715ec210e8c871c9c932516823ae4b9f6d07a6641b5cbd6aee97315253236c541624d64e63356f79ffed8aaf573397631676791f8bc16ca50b49b4ff9 WHIRLPOOL 2da66b583dd11de6bdd98b890b77a632249597d0df62b09f72c2520968abfa83b2ae03674b5cacc0b2b63ec004da31b778b1acb1ee5b6073a630faa2691d8f4f
 DIST haproxy-1.4.24.tar.gz 836768 SHA256 680928f4d001be3b59b69d4501f41aeea69e7e56bf183fa032ad6144cf97c7ef SHA512 73371b2c7d22967373e551dbac6831e4c86d63430f9ffc01c5f0e73cd1c902ce04049abf691a08bbcce77aeefff78ea67411f892584d5a85e0387ab108b13806 WHIRLPOOL d2eebbe9a66e87bbca505042e113230162a6a33eede422172cd3f018a3b9b8614d752e97fbf465a35419f4e457d11fb3eb040f2891bc037669898ce13a45406d
 DIST haproxy-1.5-dev19.tar.gz 1143258 SHA256 cb411f3dae1309d2ad848681bc7af1c4c60f102993bb2c22d5d4fd9f5d53d30f SHA512 de8b78af95974c7477a7f250cf56035ffa7c34b7332f32152e5c6d98e116cccfc3bf005b2578d022e2525d9ffb45e8a497b3337766e0f82b2d813a67e0556435 WHIRLPOOL 89199ec57ed5acffaaea66a6829769ad152791da607f8c66ef07b9b10ee970c690629001211447c775fb89e47fd43e01c8ecfd69ca5895ab967695ac6c50f0ed
-EBUILD haproxy-1.4.23.ebuild 2314 SHA256 fe86986a85b44e803095dd77c4d883a119708b4132b6e3e66ee9f213548e5696 SHA512 4726fb753f57c27d829da57292111d33c2c5132222dff092ea28df434d2369bb119a5b22669245f0d45ed34399fc8a58ad09694544396c77332e8e162e6babff WHIRLPOOL c33abc783ebc00e7066b46fe11b5f2ad689b9995bb7e295dbe05891402eb61d2047edfcdf4fca44763bad210ba5f5610a1b7c5632f76bbb2362f15241f7eec8d
+DIST haproxy-1.5-dev20.tar.gz 1197573 SHA256 8cd2260f5392b8e135a838754cb08ecd2d571d83dd6a2a4589c2085c75484359 SHA512 efb3bdf18d411fc50f4a864a8372981e015447fe4a90d6fe7b09ef12d7564fa4ad826c5fb7cb5017774c492458c28d75661459f7abd58c2dc9a3557efd93c76b WHIRLPOOL c3135fe008299df5bd89b29ec58ecb2e93dea52dfcac8ca15eb9bf6f3d246959b53880b1cf9abb8d2a758f3ee1f7a2373f9630053ed88cf5ec56f2c8c7b15302
 EBUILD haproxy-1.4.24.ebuild 2314 SHA256 5cbc45c75a555fcc70cbfc0ac43a7016c8aee439f8c9f79b19bb35249b10f688 SHA512 10fe9e9c8bb3d01b39e795d4ea1635b1a99e39f16c362bcf2480cb9e61f28fe34008dcd9459fbc63a1b4aab984398e591ad872c3295a72f6768b4b5ac5ee18d3 WHIRLPOOL 6ff488778964194421177b56c4300922c14a6ebeac0041b8ae77f244aef55e32dcfbbc1993df02fb53282d816ee355141532c1771adad7daae572adba24d665f
 EBUILD haproxy-1.5_beta19-r1.ebuild 3157 SHA256 1ffb8cff419df69c329633c547425f821ca55557e49a99a7145012668214a56a SHA512 8283bd9ff2efd57ef10be771c0e3f3c8968a057326b946112d2717946d8c50466eae8d9ec486359650df8ac18e841be52270da827125288dc05daabe4822f771 WHIRLPOOL 4604c0336fb558f89b467ae84820888363136892c7c2eaa74b0831bfeac204c33f47f202aeb8801a0a609a7e6e0272edee0ec94441bb43565494e5f0e0811319
-EBUILD haproxy-1.5_beta19.ebuild 2679 SHA256 19bd3921e3171a5451cbcf91b051d934a783bad0d89ed798c69916da9c284b86 SHA512 adfb44709a7830d8f7f5f8ba3e0e7417d4213f6c5f23cfa735a739410c91f20540ba1ec3cf2a6565a59741441b0831a9c2b52bb162e8f3ebc8eda332414948fc WHIRLPOOL 51aa3d7c9b860759823810b00e05bc740a116a03d2369235b204a5e20a33d251392216b566dcccf6607f9ae571ff22b218a1c063cba447acab7c31aa558ba99f
+EBUILD haproxy-1.5_beta20.ebuild 3152 SHA256 3bbfc4728858f043bcdfc90229daf9ba80c12f322b0494fe350308e18700daeb SHA512 8388e2f43477e8f7ad721a1474d9791e6f82200ace3ab1a3049e698494a91a9fa8f38521fe38adfe43444feb9e3b92f8524d1f2c16f79bc3ca5e8b30833c2a09 WHIRLPOOL 1f94846be3c93bbf162d40a49f4a547155911b344370d8425cfbb1b769e1c525814bb91606d9290b526e131999265673f8037ae9e26be7261fee97aeaf824613
 EBUILD haproxy-9999.ebuild 3109 SHA256 f9652752d42bcd138953fe4cf393acea18a31e9b2283eb1fcf06bff80ecac140 SHA512 82aacdd08628ad385693f13ed08b5cfe571f89909bf871d3e7b9647307743d69c112bc582b4c98ca69e1c4dac0a5f0f34e7641e30c9c90a49315c4f884ffb7f6 WHIRLPOOL 5f6dfdb73df7410b3a9bed5d4615299a59fa8a4e2ab783f41ee5cc7c9b09c5d28f375c53e2b08c6cd65614a09dd53a0920dfcb9dd76d603ffef107ecd6ffdf67
-MISC ChangeLog 14986 SHA256 ee22bad632b2b7bdeeba4cc074c15aab20b5c28b8912d3a7f6267cfb741a140b SHA512 b7a5c41b68ebf3951bd305da9fe009e3c8301372cd697c283c6c7222f4218cc0a36f9eab809570989a22a4e8e30469f1ac8504f7e7ec1e0d5c4870aac5b980c0 WHIRLPOOL d642785d8d4d5c1ce25359eebe3b7403b0b1c98fbe088aa56f52b1388d242301a08e3ad29304c436d951b00f58500de6f8f402d412d4cc5879d5ee6436481b4f
+MISC ChangeLog 15180 SHA256 642bd3f389d6164c66534a05447f6c8172550bd96ef257b9a6b1bb5e4043dd7c SHA512 0d073a21678cd0d90b2aa14ed8610079a3d250eef515b7ab1986fe941a0a6ef8e523f7f0b4ed11321cd9a817401e47b986e6181187cd005d639751adc627d1b9 WHIRLPOOL 75a9de8b2d3f257168b8101262b2bead0fbcdcdfd21d6c1edee2d710ad0df77d5a1d7a90b3aef46f87f43ebfa56a70b6b01b819daa65318a0cb8959058a7f172
 MISC metadata.xml 1536 SHA256 1b50a38097c93a5656621fd4ad5e75e886aa47d7f6b4cafbbf88c0078c89b8f6 SHA512 d492805f0d02fcb2c0c4f9a4be7186f416afbc1c924b7eeb07ef3e5e0319685a7ef3f48752fb67be2538237cd88146bacadb4b43cabbab4f1bc91a78aa7ebc4b WHIRLPOOL 505f69206dd51ad75dd8ffea64aafb068eb6289ab4f481093136a393d1e394cddac290f5b7bf437aeac2c404852654ddc16bc3019c8179f2634f19038541d982
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.21 (GNU/Linux)
+Version: GnuPG v2.0.22 (GNU/Linux)
 
-iQEcBAEBCAAGBQJSOEonAAoJEJWyH81tNOV9cy4H/i3lu5lj944SOxJjZG5dbb3H
-+myk/TNYnsB7+TRMCdeN7sW6bseNetkN5H4mjgn23G5boqJtSh9j/SXdwPt1F1F0
-U8KBA6unzeRjD4rX4RpIuJRV4L3ke5mqnKpsvRHuSt7I/bkmVAC4PZlRHh251L2s
-/jIUhHQ4wdsoKXYmw4LC4WzVb+umMMJK8q6hJpE6n/82w1WWqErZetNH3AfVAjwK
-HpIWiK+//WNT+gLSKmDMviuRnHJMkYHQZBvNPbEFVwr7b6Y/6KGiTMJ1Bnu5LrtZ
-7DOXEprXaA2Uz+RAlXgzGdYL1iTSClpqSP1AxT5GVxwjYREmvqY3hakL9hV1xiw=
-=mjmy
+iQEcBAEBCAAGBQJSrv0EAAoJEMOx0zmdw4Z1D1EIAI3dSq9NItghHK1tnJreKME7
+W6QZBsaRyDpShSeJMAuBIPclftih3Lcb7l/eWohjF65ID3NWxHheYVEEcxKuhtcW
+8Ww2bhXIWuFP3PBWfuzc1CTDZE3O6PBhodh7C7oH7Rkqc1/KT0sB0TUbmWS0ivfU
+ehG6ZkKsd1PY7QjI/qlSuy+ngYQPYElstr72/yrXasX78Wsr0h3yHPTpU5whm5lK
+7otm3Gl5JKbUO3vR4p7g2+kCB7LKntIJvq5FgPL7Os9kYxChzmDAAuyXLZS62bOR
+flE5Dw4lhDu0Sm04mEv1T1BfCvltM/2CTEo+tUzgW+ejwIu3VCfn/KB54FMjKNw=
+=8Rh8
 -----END PGP SIGNATURE-----
