@@ -3,13 +3,15 @@ Hash: SHA256
 
 AUX surfraw-2.2.6-gentoo_pkg_tools.patch 1155 SHA256 e69f2b9f61eb6078a67e38cfb7351c2e86f6bdd521afaf06c50a520389491e0e SHA512 98733be556508761d27543f5af751333d5aced7371cc6510607e4b7d88e546dcbc8420ae5620b9a8d195f2601cb053352f3bee9b9c513bc51ea5bc0c6c3a1cab WHIRLPOOL 3630a9f13dda1cb4a9e3401683b104f227ed564c9f4a24edee1df1adb5788bf048e7ac98572190b78f0802dbd9d9600c5dbc39079ae0dc09b9a892d0abf58f7e
 DIST surfraw-2.2.8.tar.gz 183019 SHA256 925075e05637e39458b00e859193aacde306aafd9a962f44f5114f81713539ec SHA512 a87604908e1a8372d9255e1f49886da41520b2d41e4ec3bd2fd27ec9abc5c46da6d383631a0e1e815b0c066172f8e4029ae03390549a6fe57e7b7c09db41ad95 WHIRLPOOL 9306613a7b8872aea8509d36b60305c6ae0776cd87951ff5476dae8c777a6d78b506ee04373dacc8d74549be66b44015a5a4f02b7b33b927166664a215e07ffe
+DIST surfraw-2.2.9.tar.gz 200042 SHA256 aa97d9ac24ca4299be39fcde562b98ed556b3bf5ee9a1ae497e0ce040bbcc4bb SHA512 81ddfc5300f5f052e09187144f39c0e1f0d6a0df9ad82d4457b60498278061ac6736a8236bd2b3516f6ad885d22c8616372b354f11b2dbb46ef4f3790456f016 WHIRLPOOL 80b149ddb7f37a0c000bba6dcbd1d4eff124581ba3266fb0cdf87467759856fc933067d45a4af30687564fa29f2b9756c6b393378420b0661e5d7c90cc8d30d6
 EBUILD surfraw-2.2.8.ebuild 2590 SHA256 2185c3fbb4363b068a0336b563d548b85017c3b821579717d86bef0d082b5b90 SHA512 ab051489c533d3275cea4c234a46c739474e33d51def1480801229a70ebd06311f3b8d9a12b7bc9d9f43ce706dacebf4666208caa4a272a4cee8ec8a33d7bda9 WHIRLPOOL 5c47df52a0989802b33daeb971a86c135d708addbbfa1d4f22c0ae6d3063013a12c437c1819613cc54c0cfd8416c32cd1a6753d3b51b6bba1372df85c0be0dd4
-MISC ChangeLog 9391 SHA256 bf555bfa46094c4a4b6cfa842b83891dbd2a590c1aea9a9d129b426333fcbdbc SHA512 5490e28965d4fecc6cc8b5824b81d46bf9853b5d6181ed4f448f510779f13e680412239e7d412826f406f0304ed895faed141fc0ab66a10c6205d1a9748dcd73 WHIRLPOOL 491a96a8dc6ed0ae994124b1fad6c5ea025b3d612947a66a1a5ed6271a77b2674237054dc935f72b740c712080e35f32186f654ae18760f4d58be1e612063238
+EBUILD surfraw-2.2.9.ebuild 2592 SHA256 3165b14db92b79be57a06c9ddcb90d47fd81f9d2e208b722db478c70daa6fd4a SHA512 7d3a4b83d63de7804220fb88d291b5519bd61420cf829cb76cf6b124146ef41c55fb4800d55575c88d1dbfabd93eaf42970e4b853ab25852d62ca9d1c9705e56 WHIRLPOOL 95cbbe7f4ca4c2f8cdcc2483e1f7ca4cb9934f8dc3d4288368ca3db7bca10081867fa937ba84eb8243407cf01ff6361c4cd88e79e6180d7bb7ff012edf5e67c2
+MISC ChangeLog 9508 SHA256 f8b48c17f73b8df35efd2f610b7fd79ca255dd1225360796426b35593547fd3b SHA512 15ebd03fff7b3b43a0b17509fc2d6a0b66d9e1c657d0b4ba1c4cdd7fe358e91ab16fa9fa358b05fb327f53f225e3ea53c11c0ef75cc92ac45cacfcea4e548a1c WHIRLPOOL 19db39b3a4739ee5e6248beecb3eb39c81cce4104c2bc924c050bcd68f70ad1cd4e94c32acec425cf01bca8a4eaa3ecebd30a18ba3c70e9bb0b50fda8f5302c3
 MISC metadata.xml 1326 SHA256 cc11a4bc83bdc67a999eded2785e310d0e2a023eb59d1c1f978c7c54d4b0e8f3 SHA512 8c69a3b8c010ab63b26ed2e324f78521fcc4138e9aec728b945492d8febc8de21f2952b73724b8f358ff3a9df47345e1ecbc13e2e97203c613209e18b6f8677e WHIRLPOOL 07f513483d1e245a31ede40142dc956a562d4a4b9bd6015e98879f5bdc6e5bfbf25d676849eb5bc07b37d0989d903693d6016b4aeb64b5f9b288679fda3426ed
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.19 (GNU/Linux)
+Version: GnuPG v2.0.22 (GNU/Linux)
 
-iEYEAREIAAYFAlE1ahQACgkQVWmRsqeSphMujACfdJdNI+tJGEkRFSvHZw04FH1R
-g84AnA4Ym5sIolvyNnLC3RwPLApadgFJ
-=/g2/
+iEYEAREIAAYFAlKu/hAACgkQVWmRsqeSphNPfACcD8xLKmkNeijIIxipsOBQmjAL
+x2cAn0RWaFhCMpEXfy9wzhur1XouKDP0
+=jHI0
 -----END PGP SIGNATURE-----
