@@ -1,6 +1,11 @@
 # ChangeLog for www-client/surfraw
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-client/surfraw/ChangeLog,v 1.71 2013/03/05 03:44:18 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-client/surfraw/ChangeLog,v 1.72 2013/12/16 13:20:15 jer Exp $
+
+*surfraw-2.2.9 (16 Dec 2013)
+
+  16 Dec 2013; Jeroen Roovers <jer@gentoo.org> +surfraw-2.2.9.ebuild:
+  Version bump.
 
   05 Mar 2013; Jeroen Roovers <jer@gentoo.org> metadata.xml:
   Add proxy-maintainers herd.
