@@ -1,6 +1,12 @@
 # ChangeLog for net-proxy/haproxy
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-proxy/haproxy/ChangeLog,v 1.85 2013/09/17 12:30:09 tomwij Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-proxy/haproxy/ChangeLog,v 1.86 2013/12/16 13:15:43 idl0r Exp $
+
+*haproxy-1.5_beta20 (16 Dec 2013)
+
+  16 Dec 2013; Christian Ruppert <idl0r@gentoo.org> -haproxy-1.4.23.ebuild,
+  -haproxy-1.5_beta19.ebuild, +haproxy-1.5_beta20.ebuild:
+  Version bump. Cleanup.
 
 *haproxy-1.5_beta19-r1 (17 Sep 2013)
 
